Fix 3 for parallex on iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2779,6 +2779,12 @@ Google map
   }
 }
 
+@media only screen and (max-width:749px) {
+  .parallax {
+    background-attachment: inherit;
+  }
+}
+
 @media (max-width: 767px) {
   /* Navbar */
   .navbar-custom .navbar-nav {
